2002-10-29  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Do not add "*VariablePaperSize: False" to
	  the PPD file when variable page sizes are supported.

	* lib/Foomatic/DB.pm: Encoding of option code: When splitting long
	  lines, mark the end with "&&" to distinguish between split lines
	  and newlines. Make colon and opening quotes of a PPD line with
	  code always being in the same line as the keyword.

2002-10-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-datafile.in: Changed meaning of the "-t" settings:
	  "cups" produces a PPD-O-Matic PPD now and "cupsold" the old
	  CUP-O-Matic PPD. All other choices behave the same as before.
	  This leads to the KDE Printing Manager generating PPD-O-Matic
	  PPDs.

	* foomatic-datafile.1.in: Updated man page to mention the choices
	  "cupsold", "lprng", and "direct" for the "-t" option of
	  "foomatic-datafile".
	
2002-10-23  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-preferred-driver.in: Added new drivers: "hpijs-rss",
	  "lxm3200-tweaked", "lz11".

2002-10-22  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: After Grant Taylor discovered a huge
	  security hole in the original concept of the Perl-free PPDs,
	  changed to a new concept. The former concept was that the
	  GhostScript command line and all snippets to insert into the
	  command line are stuffed into the PostScript data by the client
	  (so having the PPD file on the server was not required). This
	  leads to the case that every user can run arbitrary programs on
	  the server. In the new concept the client stuffs only key/value
	  pairs for the option settings into the PostScript data (as in
	  Foomatic 2.0.x), the server will read the command line
	  information from the PPD file and build the command line
	  according to the settings in the PostScript data. The PPD files
	  do not contain any important information in comment lines, so