@@ -1,3 +1,8 @@
+2002-11-03  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* lib/Foomatic/DB.pm: Fixed small bug in PPD generation correcting
+	  a "CmdLine" keyword, added some comments.
+	
 2002-10-29  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* lib/Foomatic/DB.pm: Do not add "*VariablePaperSize: False" to
